--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +23,6 @@
   },
   "homepage": "https://github.com/mundorum/graph#readme",
   "devDependencies": {
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "vite": "^6.0.7"
   }
 }
